force-app/main/default/objects/Order/fields/Advance_Amount_p__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_p__c</fullName>
    <formula>(Advance_Received_Amount__c/ Total_Amount_Including_GST__c)</formula>
    <label>Advance Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>