force-app/main/default/objects/Order/fields/Advance_less_than_Payment_Term_committed__c.field-meta.xml
<CustomField>
    <fullName>Advance_less_than_Payment_Term_committed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance less than Payment Term committed</label>
    <type>Checkbox</type>
</CustomField>