force-app/main/default/objects/Order/fields/Advance_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received_Amount__c</fullName>
    <label>Advance Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>