force-app/main/default/objects/Order/fields/Bill_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Id__c</fullName>
    <label>Bill To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>