force-app/main/default/objects/Order/fields/Civil_work__c.field-meta.xml
<CustomField>
    <fullName>Civil_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Civil work</label>
    <type>Checkbox</type>
</CustomField>