force-app/main/default/objects/Order/fields/Contracted_Account__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracted Account?</label>
    <type>Checkbox</type>
</CustomField>