force-app/main/default/objects/Order/fields/Credit_Approval_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Check_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Approval Check Required?</label>
    <type>Checkbox</type>
</CustomField>