force-app/main/default/objects/Order/fields/Delivery_Period__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Period__c</fullName>
    <label>Delivery Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Period</valueSetName>
    </valueSet>
</CustomField>