force-app/main/default/objects/Order/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>