force-app/main/default/objects/Order/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19</fullName>
                <label>Exports</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Industrial Customer</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Industrial Dealer</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>IFB Point FOFO</label>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>HAD Direct Customer</label>
            </value>
            <value>
                <fullName>29</fullName>
                <isActive>false</isActive>
                <label>HAD Others</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>HAD Stk Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>