force-app/main/default/objects/Order/fields/Electrical_Work__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Work</label>
    <type>Checkbox</type>
</CustomField>