force-app/main/default/objects/Order/fields/Employee_code__c.field-meta.xml
<CustomField>
    <fullName>Employee_code__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee code</label>
    <type>Text</type>
</CustomField>