force-app/main/default/objects/Order/fields/Expected_Date_for_site_Reediness__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_for_site_Reediness__c</fullName>
    <description>This date will be used for Site Readiness before 7 day approval will to NSM</description>
    <label>Expected Date for site Readiness</label>
    <type>Date</type>
</CustomField>