force-app/main/default/objects/Order/fields/External_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_Status__c</fullName>
    <label>External Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Approval_Status</valueSetName>
    </valueSet>
</CustomField>