force-app/main/default/objects/Order/fields/External_Remark__c.field-meta.xml
<CustomField>
    <fullName>External_Remark__c</fullName>
    <label>External Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>