force-app/main/default/objects/Order/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foundation</label>
    <type>Checkbox</type>
</CustomField>