force-app/main/default/objects/Order/fields/Freight_Included__c.field-meta.xml
<CustomField>
    <fullName>Freight_Included__c</fullName>
    <label>Freight Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included in the Quote</fullName>
            </value>
            <value>
                <fullName>Extras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>