force-app/main/default/objects/Order/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borne by Customer</fullName>
            </value>
            <value>
                <fullName>Borne by IFB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>