force-app/main/default/objects/Order/fields/GST_Certificate_Provided__c.field-meta.xml
<CustomField>
    <fullName>GST_Certificate_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Certificate Provided?</label>
    <type>Checkbox</type>
</CustomField>