force-app/main/default/objects/Order/fields/GST_Doc_Link__c.field-meta.xml
<CustomField>
    <fullName>GST_Doc_Link__c</fullName>
    <label>GST Doc Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>