force-app/main/default/objects/Order/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Request for Re-Allocation</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Request Cancellation</fullName>
            </value>
            <value>
                <fullName>Request for Repair</fullName>
            </value>
            <value>
                <fullName>Request for Replacement</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Resolved (soft closure)</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Negative Response from Customer</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>