force-app/main/default/objects/Order/fields/Manufacturing_Status__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Status__c</fullName>
    <label>Manufacturing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MANUFACTURING STARTED</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>