force-app/main/default/objects/Order/fields/NSM_USER__c.field-meta.xml
<CustomField>
    <fullName>NSM_USER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSM USER</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>