force-app/main/default/objects/Order/fields/Operation_Parakram__c.field-meta.xml
<CustomField>
    <fullName>Operation_Parakram__c</fullName>
    <formula>TEXT( Opportunity.Operation_Parakram__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Parakram</label>
    <type>Text</type>
</CustomField>