force-app/main/default/objects/Order/fields/Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Order_Location__c</fullName>
    <formula>Opportunity.Opportunity_location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Location</label>
    <type>Text</type>
</CustomField>