force-app/main/default/objects/Order/fields/PAN_Card_Provided__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN Card Provided?</label>
    <type>Checkbox</type>
</CustomField>