force-app/main/default/objects/Order/fields/PAN_Doc_Link__c.field-meta.xml
<CustomField>
    <fullName>PAN_Doc_Link__c</fullName>
    <label>PAN Doc Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>