force-app/main/default/objects/Order/fields/Payment_Split_ratio__c.field-meta.xml
<CustomField>
    <fullName>Payment_Split_ratio__c</fullName>
    <label>Payment Split ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>