force-app/main/default/objects/Order/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>IF(Total_Amount_Including_GST__c - Total_Amount_Received__c &lt; 0, 
   0, 
   Total_Amount_Including_GST__c - Total_Amount_Received__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>