force-app/main/default/objects/Order/fields/Pending_Amount_p__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount_p__c</fullName>
    <formula>(Pending_Amount__c / Total_Amount_Including_GST__c)</formula>
    <label>Pending Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>