force-app/main/default/objects/Order/fields/Piping__c.field-meta.xml
<CustomField>
    <fullName>Piping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piping</label>
    <type>Checkbox</type>
</CustomField>