force-app/main/default/objects/Order/fields/PO_Link__c.field-meta.xml
<CustomField>
    <fullName>PO_Link__c</fullName>
    <label>PO Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>