force-app/main/default/objects/Order/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>TEXT(Opportunity.Product_category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>