force-app/main/default/objects/Order/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>SBQQ__Quote__r.RecordType.Name</formula>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>