force-app/main/default/objects/Order/fields/Reason_for_Followup__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Followup__c</fullName>
    <label>Reason for Follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI submission &amp; balance payment collection</fullName>
            </value>
            <value>
                <fullName>Post Site Inspection</fullName>
            </value>
            <value>
                <fullName>Balance Payment collection</fullName>
            </value>
            <value>
                <fullName>Unloading</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Visit with Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>