force-app/main/default/objects/Order/fields/Reasons_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Visit__c</fullName>
    <label>Reasons for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI submission &amp; balance payment collection</fullName>
            </value>
            <value>
                <fullName>Post Site Inspection</fullName>
            </value>
            <value>
                <fullName>Balance Payment collection</fullName>
            </value>
            <value>
                <fullName>Unloading</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Visit with Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>