force-app/main/default/objects/Order/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <label>Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>