force-app/main/default/objects/Order/fields/Sales_Order_Remark__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Remark__c</fullName>
    <label>Sales Order Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>