force-app/main/default/objects/Order/fields/Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Status__c</fullName>
    <label>Sales Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>