force-app/main/default/objects/Order/fields/Ship_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Id__c</fullName>
    <label>Ship To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>