force-app/main/default/objects/Order/fields/Site_Readiness_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Approval_Status__c</fullName>
    <label>Site Readiness Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by NSM</fullName>
            </value>
            <value>
                <fullName>Pending by NSM</fullName>
            </value>
            <value>
                <fullName>Rejected by NSM</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>