force-app/main/default/objects/Order/fields/Synced_with_the_IFB_Internal_Portal__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_the_IFB_Internal_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with the IFB Internal Portal</label>
    <type>Checkbox</type>
</CustomField>