force-app/main/default/objects/Order/fields/TCS_Declaration_Form_Provided__c.field-meta.xml
<CustomField>
    <fullName>TCS_Declaration_Form_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TCS Declaration Form Provided?</label>
    <type>Checkbox</type>
</CustomField>