force-app/main/default/objects/Order/fields/TDS_Provided__c.field-meta.xml
<CustomField>
    <fullName>TDS_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TDS Provided</label>
    <type>Checkbox</type>
</CustomField>