force-app/main/default/objects/Order/fields/Total_Amount_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Including_GST__c</fullName>
    <label>Total Amount(Including GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>