force-app/main/default/objects/Order/fields/Total_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received__c</fullName>
    <label>Total Amount Received</label>
    <summarizedField>Order_Installment__c.Amount__c</summarizedField>
    <summaryForeignKey>Order_Installment__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>