force-app/main/default/objects/Order/fields/Total_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Amount__c</fullName>
    <label>Total GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>