force-app/main/default/objects/Order/fields/Warranty_Term_In_Year__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term_In_Year__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Warranty Term(In Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>