force-app/main/default/objects/Order/fields/Water_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Water_Inlet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Inlet</label>
    <type>Checkbox</type>
</CustomField>