force-app/main/default/objects/Order/fields/X30Days__c.field-meta.xml
<CustomField>
    <fullName>X30Days__c</fullName>
    <description>This field is use in Scheduled flow only</description>
    <formula>If(ISPICKVAL(Status, &apos;On Hold&apos;),Today() + 30, Today())</formula>
    <inlineHelpText>This field is use in Scheduled flow only</inlineHelpText>
    <label>30Days</label>
    <type>Date</type>
</CustomField>