force-app/main/default/objects/Order/recordTypes/IDW.recordType-meta.xml
<RecordType>
    <fullName>IDW</fullName>
    <active>true</active>
    <label>IDW</label>
</RecordType>