force-app/main/default/objects/Order/recordTypes/ILM.recordType-meta.xml
<RecordType>
    <fullName>ILM</fullName>
    <active>true</active>
    <label>ILM</label>
</RecordType>