force-app/main/default/objects/Order/validationRules/CIN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CIN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( CIN_No__c )),
    NOT(
        REGEX(CIN_No__c , &quot;^[A-Z]{1}[0-9]{5}[A-Z]{2}[0-9]{4}[A-Z]{3}[0-9]{6}$&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>CIN_No__c</errorDisplayField>
    <errorMessage>Please Enter Correct CIN No</errorMessage>
</ValidationRule>