force-app/main/default/objects/Order/validationRules/GST_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( GST_No__c )),
    NOT(
        REGEX(GST_No__c , &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[0-9]{1}[A-Z0-9]{1}[A-Z0-9]{1}$&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>GST_No__c</errorDisplayField>
    <errorMessage>Please Enter Correct GST No</errorMessage>
</ValidationRule>