force-app/main/default/objects/Order/validationRules/PAN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( PAN_No__c )),
    NOT(
        REGEX(PAN_No__c , &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>PAN_No__c</errorDisplayField>
    <errorMessage>Please Enter Correct PAN No</errorMessage>
</ValidationRule>