force-app/main/default/objects/Order/validationRules/PO_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Bypass_Validation_Rules__c = FALSE, ISBLANK(PoNumber))</errorConditionFormula>
    <errorMessage>Please provide the PO Number as it is mandatory to create the order record</errorMessage>
</ValidationRule>