force-app/main/default/objects/Order/listViews/AllDraftOrders.listView-meta.xml
<ListView>
    <fullName>AllDraftOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Product_Category__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Total_Amount_Received__c</columns>
    <columns>Advance_Received_Amount__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>PO Draft</value>
    </filters>
    <label>All Draft Orders</label>
</ListView>